k8s/staging/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ski-website
  labels:
    name: ski-website-staging
