k8s/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ski-website
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: nginx
        image: ghcr.io/schlagenkraft/web/ski-website:simple
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
